--- a/public/weather.html
+++ b/public/weather.html
@@ -12,23 +12,23 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"> Dimash </a>
+      <a class="navbar-brand" href=""> Dimash </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link active" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="weather.html"> Weather </a>
+            <a class="nav-link" aria-current="page" href="/weather"> Weather </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="dictionary.html"> Dictionary </a>
+            <a class="nav-link" href="/dictionary"> Dictionary </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="translater.html"> Translator </a>
+            <a class="nav-link" href="/translate"> Translator </a>
           </li>
         </ul>
       </div>
